2009-06-18 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* AppDomainSetup.cs: update attribute.
	* TermInfoDriver.cs: ensure we are initialized in CheckWindowDimensions().
	* DateTimeOffset.cs: Implement Parse().
	* DateTime.cs: add 'zzz' to the list of default time formats. Return a
	DateTimeOffset from _DoParse. Fixed the offset minutes when the
	timezone is specified as a negative one.
	* Console.cs: updates for MoveBufferArea().
	* AppDomainManager.cs: implement EntryAssembly.
	* AppDomain.cs: update attribute.

2009-06-15  Atsushi Enomoto  <atsushi@ximian.com>

	* Environment.cs : bump corlib version.

2009-06-12  Bill Holmes  <billholmes54@gmail.com>

	* Variant.cs (GetValue):  Changing the bool case to use the short value.  
	  This is to avoid junk in the high word.

	Contributed under MIT/X11 license.

2009-06-10  Marek Safar  <marek.safar@gmail.com>

	* Predicate.cs, Action.cs, Funcs.cs, Comparison.cs, IComparable.cs,
	Converter.cs, EventHandler.cs: Add type variance.
	
	* InvalidTimeZoneException.cs,
	TimeZoneNotFoundException.cs: New file.

2009-05-27  Zoltan Varga  <vargaz@gmail.com>

	* AppDomain.cs (DoAssemblyResolve): Fix recursion detection. Fixes #507003.

2009-05-26  Mark Probst  <mark.probst@gmail.com>

	* Thread.cs: Don't set the execution context when creating a
	thread because the _ec member is thread static and we set the
	wrong one.  It's now set by the runtime.  We just provide the
	correct one.

	* Environment.cs: Bump corlib version.

2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* Tuple.cs Tuples.cs: New files.

	* Lazy.cs LazyExecutionMode.cs Funcs.cs: New files.

2009-05-14 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Type.cs: (GetInterfaceMap) 'this' can't be an interface itself.
	Fixed bug #503728.

2009-05-03 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TermInfoDriver.cs: replace Peek with DataAvailable.

2009-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Console.cs: Remove Windows-specific p/invokes and SSC code